--- a/Backend/bdu-clearance/pom.xml
+++ b/Backend/bdu-clearance/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>bdu-clearance</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bdu-clearance</name>
-	<description>Student clearance project for Bahir dar university</description>
+	<description>Student clearance project for Bahir Dar university</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -65,6 +65,19 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.5.5.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -78,6 +91,11 @@
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 						</path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>1.5.5.Final</version>
+                        </path>
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
@@ -93,7 +111,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-		</plugins>
+        </plugins>
 	</build>
 
 </project>
