adding all dtos and repositories and demo user controler and services

--- a/Backend/bdu-clearance/src/main/resources/application.properties
+++ b/Backend/bdu-clearance/src/main/resources/application.properties
@@ -1,7 +1,30 @@
+#spring.application.name=bdu-clearance
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/bdu_clearance
+#spring.datasource.username=root
+#spring.datasource.password=@101112
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+##temportary security disbaled
+## Disable Spring Security temporarily
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+#
+## OR permit all requests
+#spring.security.filter.dispatcher-types=async,error,request
+
 spring.application.name=bdu-clearance
+
+# Database Configuration
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bdu_clearance
 spring.datasource.username=root
 spring.datasource.password=@101112
+
+# JPA Configuration
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Disable ALL Spring Security
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
