adding lost kard usermanagement and others

--- a/Backend/bdu-clearance/src/main/resources/application.properties
+++ b/Backend/bdu-clearance/src/main/resources/application.properties
@@ -11,5 +11,8 @@ spring.jpa.show-sql=true
 app.jwt.secret=QCMkJV4mKigpQmR1Q2xlYXJhbmNlU2VjcmV0S2V5IUAjJCVeJiooKQ==
 app.jwt.expiration-ms=43200000
 
-
-
+# File Upload
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+file.upload-dir=uploads
